--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "@ionic/angular": "^4.11.7",
     "@ionic/pro": "2.0.4",
     "@ionic/storage": "^2.2.0",
+    "@microsoft/signalr": "^8.0.0",
     "@types/sweetalert": "^2.0.4",
     "angular-calendar": "^0.27.21",
     "angular-calendar-week-hours-view": "^1.0.2",
@@ -134,7 +135,9 @@
       "cordova-plugin-app-update": {},
       "cordova-plugin-file": {},
       "cordova-pdf-generator": {},
-      "cordova-plugin-file-opener2": {},
+      "cordova-plugin-file-opener2": {
+        "ANDROID_SUPPORT_V4_VERSION": "27.+"
+      },
       "cordova-plugin-app-version": {}
     },
     "platforms": [
